Bug 165582 - Assertion failed when opening a specific document
Summary: Assertion failed when opening a specific document
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
25.8.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Mike Kaganski
URL:
Whiteboard: target:25.8.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks: DOCX-Paragraph Crash
  Show dependency treegraph
 
Reported: 2025-03-05 11:53 UTC by Mike Kaganski
Modified: 2025-03-25 05:17 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
A bugdoc from i#108708 (557.71 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2025-03-05 11:53 UTC, Mike Kaganski
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Mike Kaganski 2025-03-05 11:53:37 UTC
Created attachment 199617 [details]
A bugdoc from i#108708

Open attached document (from https://bz.apache.org/ooo/show_bug.cgi?id=108708) using current master. Since commit 24eb7e8e01b9b2e9354c3d8fde66ee528b3e1ed3 (tdf#164487: "Show underline" compatibility option OOXML import/export, 2025-02-26), an assertion is filed.
Comment 1 Mike Kaganski 2025-03-05 12:01:27 UTC
https://gerrit.libreoffice.org/c/core/+/182536
Comment 2 Commit Notification 2025-03-05 14:16:59 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/f6f1c7eb64a5b4ee44278e77e59305878979cfaa

tdf#165582: nMaxWidth may be negative

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Xisco Faulí 2025-03-07 11:55:17 UTC
For the record, the crash is also reproduced with attachment 108345 [details] from bug 85402
Comment 4 Xisco Faulí 2025-03-07 11:55:43 UTC
(In reply to Xisco Faulí from comment #3)
> For the record, the crash is also reproduced with attachment 108345 [details]
> [details] from bug 85402

in this case, it's a crash reproducible with a release build