tdf#165582: nMaxWidth may be negative

Change-Id: Ibe4a57e8a098b219e2662d3ce8645d5caef98123
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/182536
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
(cherry picked from commit f6f1c7eb64a5b4ee44278e77e59305878979cfaa)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/182872
Tested-by: Jenkins CollaboraOffice <jenkinscollaboraoffice@gmail.com>
Reviewed-by: Caolán McNamara <caolan.mcnamara@collabora.com>
(cherry picked from commit 24d7c6bd1561de150dd1ab33e624f1d2cab0d3ef)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/182882
Tested-by: Andras Timar <andras.timar@collabora.com>
Reviewed-by: Andras Timar <andras.timar@collabora.com>